@@ -1,10 +1,8 @@
 package org.nyer.pyjs.primitive.operator;
 
 import org.nyer.pyjs.Env;
-import org.nyer.pyjs.primitive.type.Float;
-import org.nyer.pyjs.primitive.type.Integer;
 
-public class Div extends NumberOp {
+public class Div extends ValueOp {
 	public Div() {
 		super("/", new String[] {"op1", "op2"});
 	}
@@ -14,33 +12,33 @@ public class Div extends NumberOp {
 		Object arg1 = arguments[0];
 		Object arg2 = arguments[1];
 		
-		Object op1 = checkOperand(env, arg1);
+		Object op1 = checkNumOperand(env, arg1);
 		
-		Object op2 = checkOperand(env, arg2);
+		Object op2 = checkNumOperand(env, arg2);
 		
 		if (op1 instanceof Integer && op2 instanceof Integer) {
-			Integer int1 = (Integer) op1;
-			Integer int2 = (Integer) op2;
-			if (int2.getValue() == 0)
+			Integer v1 = (Integer) op1;
+			Integer v2 = (Integer) op2;
+			if (v2 == 0)
 				throw new Exception("Divider cann't be zero");
 			
-			return new Integer(int1.getValue() / int2.getValue());
+			return org.nyer.pyjs.primitive.type.Integer.valueOf(v1/v2);
 		} else {
 			if (op1 instanceof Float && op2 instanceof Float) {
-				Float float1 = (Float) op1;
-				Float float2 = (Float) op2;
-				return new Float(float1.getValue() / float2.getValue());
+				Float v1 = (Float) op1;
+				Float v2 = (Float) op2;
+				return org.nyer.pyjs.primitive.type.Float.valueOf(v1/v2);
 			} else if (op1 instanceof Float) {
-				Float float1 = (Float) op1;
-				Integer int2 = (Integer) op2;
+				Float v1 = (Float) op1;
+				Integer v2 = (Integer) op2;
 
-				if (int2.getValue() == 0)
+				if (v2 == 0)
 					throw new Exception("Divider cann't be zero");
-				return new Float(float1.getValue() / int2.getValue());
+				return org.nyer.pyjs.primitive.type.Float.valueOf(v1/v2);
 			} else {
-				Integer int1 = (Integer) op1;
-				Float float2 = (Float) op2;
-				return new Float(int1.getValue() / float2.getValue());
+				Integer v1 = (Integer) op1;
+				Float v2 = (Float) op2;
+				return org.nyer.pyjs.primitive.type.Float.valueOf(v1/v2);
 			}
 		}
 	}
